@@ -1,2 +1,3 @@
 DIST scss-lint-0.27.0.gem 57344 SHA256 02d560398002fa4ad1b232fb1307db1652b7abb3e4361930073fe3b640aaaeb6 SHA512 e6a7225c91722b7244e1243af1f48eb93a926b115462585148740844ddd52db42783807276097c87b8be74d3992af0f351baf23c271275c24fe7358fb4e7dd6d WHIRLPOOL f25257f1104c05df1099739ac3f1538a2fdff9e370b4448055111cf504e12c771c4bba2900f66263a56b157fc0e0e428536d2363a7a46c43e39eef66fff49d36
 DIST scss-lint-0.29.0.gem 58880 SHA256 f36ed63bae5add3181cbd24a9525b96e21fbd41d0204ec217ae295dad683e56e SHA512 ee911425af4ab14c5eca8baffe7805404d97f7a3aefede9330a67a6f6504e1ff88a443051fe993a650d9f2999e1cb2450526a053fff32dea34bc9bb4efe7c85a WHIRLPOOL e7f2c217751ff244adec0027315f13c9211353d9b2d8cd32c4e041309c82fbaeccdc2c9c77e05c13125531bb939382d103065ec5a99c58a3ab50d3ec9b6aefe5
+DIST scss-lint-0.34.0.gem 74752 SHA256 03685f5756e43c771270e65b54336de45180de07abb0d527bdc25187fbf0d448 SHA512 cb486616cacd1d5a17bfacdb321aa1e1d583e40937abcf13c25f3bb6a095dc9d0daff61db9dc7775468fd0d48e024c71c6b2b9692b5fb5b1f07fc04383fa6de8 WHIRLPOOL d1fe8f7ac03430350a8b7a8719a44dcf141eaa7ac623cd3b5dab8118e06b0563b35993f53795bcde60c27684d818182d28065d4c45cf3d20c674614351483d7a
