@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/scss-lint
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*scss-lint-0.34.0 (13 Mar 2015)
+
+  13 Mar 2015; Hans de Graaff <graaff@gentoo.org> +scss-lint-0.34.0.ebuild:
+  Version bump.
 
 *scss-lint-0.29.0 (30 Oct 2014)
 
